--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,21 @@
 /* 
 Home style
 */
+#BodyOfHome {
+  background-color: #f5f5f5;
+}
 
 #filterForm {
-  border: 1px solid black;
+  border: 1px solid #9a9999;
+  background-color: #ffffff;
+  height: 320px;
+}
+
+/* 
+Merchandise card
+*/
+.merchandiseCard:hover {
+  border-radius: 7px;
+  background: linear-gradient(225deg, #e6e6e6, #ffffff);
+  box-shadow: -10px 10px 22px #8c8c8c, 10px -10px 22px #ffffff;
 }
